--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-<h1>first commit<h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>UniswapV3 Asset IL/Fee/Hedge Simulation</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
+    <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts-gl.min.js"></script>
+
+</head>
+<header>
+    <h2 style="color:#fff">UniswapV3 Asset IL/Fee/Hedge Simulation</h2>
+</header>
+<section>
+    <div id="assetchart" class="chart-container" style="width:1000px; height:720px;"></div>
+    <script src="js/simulation.js"></script>
+    <script src="js/script.js"></script>
+</section>
+<aside>
+    <div class="container">
+        
+        <div class="length inputbox">
+            <div class="field-title" data-length='0'>Initial &nbsp Capital</div>
+            <input class="result__viewbox" id="initialCapital" value="10000"></input>
+        </div>
+        <div class="length inputbox">
+            <div class="field-title" data-length='0'>Entry &nbsp Price</div>
+            <input class="result__viewbox" id="initialPrice" value="4000"></input>
+        </div>
+        <div class="length range__slider" data-min="0" data-max="16000">
+            <div class="length__title field-title" data-length='0'>Upper Price&nbsp&nbsp</div>
+            <input id="slider" class="slider" type="range" min="0" max="16000" value="5000" />
+        </div>
+        <div class="length range__slider" data-min="0" data-max="16000">
+            <div class="length__title field-title" data-length='0'>Lower Price&nbsp&nbsp</div>
+            <input id="slider" class="slider" type="range" min="0" max="16000" value="2000" />
+        </div>
+        <div class="length range__slider" data-min="5" data-max="100">
+            <div class="length__title field-title" data-length='0'>Hedge Ratio &nbsp&nbsp</div>
+            <input id="slider" class="slider" type="range" min="5" max="100" value="23" />
+        </div>
+        <button class="btn generate" id="Simulate">Simulate</button>
+        <div class="length selectoption" >
+            <select id="visualtype" >
+                <option value="raw">Raw(Impermanent Loss)</option>
+                <option value="rawwithfee">Raw + Fee</option>
+                <option value="hedge">Hedged</option>
+                <option selected="selected" value="hedgeandfee">Hedge + Fee + Funding</option>
+            </select>
+        </div>
+    </div>
+</aside>
+<footer></footer>
+</html>
