--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         
         <div class="length inputbox">
             <div class="field-title" data-length='0'>Initial &nbsp Capital</div>
-            <input class="result__viewbox" id="initialCapital" value="10000"></input>
+            <input class="result__viewbox" id="initialCapital" >
         </div>
         <div class="length inputbox">
             <div class="field-title" data-length='0'>Current &nbsp Price</div>
-            <input class="result__viewbox" id="initialPrice" value="0.9"></input>
+            <input class="result__viewbox" id="initialPrice" value="0.89">
         </div>
         
         <div class="length range__slider" data-min="0" data-max="100">
