--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
         <div class="length inputbox">
             <div class="field-title" data-length='0'>Initial &nbsp Capital</div>
-            <input class="result__viewbox" id="initialCapital" >
+            <input class="result__viewbox" id="initialCapital" value="12000" >
         </div>
         <div class="length inputbox">
             <div class="field-title" data-length='0'>Current &nbsp Price</div>
