add simulation day by day

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="#"/>
     <title>Polygon UniswapV3+AAVE Simulation</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
