--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>UniswapV3 Asset IL/Fee/Hedge Simulation</title>
+    <link rel="shortcut icon" href="#"/>
+    <title>UniswapV3 Hedge Simulation</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
     <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts-gl.min.js"></script>
@@ -10,7 +11,7 @@
     <script src="js/script.js"></script>
 </head>
 <header>
-    <h2 style="color:#fff">UniswapV3 Asset IL/Fee/Hedge Simulation</h2>
+    <h2 style="color:#fff">UniswapV3 Hedge Simulation</h2>
 </header>
 <section>
     <div id="assetchart" class="chart-container" >
@@ -21,32 +22,38 @@
         
         <div class="length inputbox">
             <div class="field-title" data-length='0'>Initial &nbsp Capital</div>
-            <input class="result__viewbox" id="initialCapital" value="5000"></input>
+            <input class="result__viewbox" id="initialCapital" value="12000" >
         </div>
         <div class="length inputbox">
             <div class="field-title" data-length='0'>Current &nbsp Price</div>
-            <input class="result__viewbox" id="initialPrice" value="1208"></input>
+            <input class="result__viewbox" id="initialPrice" value="1200">
         </div>
-        <div class="length range__slider" data-min="0" data-max="16000">
-            <div class="length__title field-title" data-length='0'>Upper Price&nbsp&nbsp</div>
-            <input id="slider" class="slider" type="range" min="0" max="16000" value="1500" />
+        
+        <div class="length range__slider" data-min="0" data-max="100">
+            <div class="length__title field-title" data-length='0'>Short Ratio &nbsp&nbsp</div>
+            <input id="slider" class="slider" type="range" min="0" max="100" value="70" />
         </div>
-        <div class="length range__slider" data-min="0" data-max="16000">
-            <div class="length__title field-title" data-length='0'>Lower Price&nbsp&nbsp</div>
-            <input id="slider" class="slider" type="range" min="0" max="16000" value="900" />
+        <div class="length range__slider" data-min="1" data-max="100">
+            <div class="length__title field-title" data-length='0'>Upper Percentage&nbsp&nbsp</div>
+            <input id="slider" class="slider" type="range" min="0" max="100" value="1" />
         </div>
-        <div class="length range__slider" data-min="5" data-max="100">
-            <div class="length__title field-title" data-length='0'>Hedge Ratio &nbsp&nbsp</div>
-            <input id="slider" class="slider" type="range" min="5" max="100" value="23" />
+        <div class="length range__slider" data-min="1" data-max="100">
+            <div class="length__title field-title" data-length='0'>Lower Percentage&nbsp&nbsp</div>
+            <input id="slider" class="slider" type="range" min="0" max="100" value="1" />
         </div>
-        <button class="btn generate" id="Simulate">Simulate</button>
+        <div class="btn_container">
+            <button class="btn generate" id="Simulate">Simulate</button>
+        </div>
         <div class="length selectoption" >
             <select id="visualtype" >
-                <option value="raw">Raw(Impermanent Loss)</option>
-                <option value="rawwithfee">Raw + Fee</option>
-                <option value="hedge">Hedged</option>
-                <option selected="selected" value="hedgeandfee">Hedge + Fee + Funding</option>
+                <option value="noHedge">No Hedge</option>
+                <option value="futureHedge">Futures Hedge</option>
+                <option value="hteHedge">HTE Hedge</option>
             </select>
+        </div>
+        <div class="btn_container">
+            <button class="btnplus" id="Plus">+</button>
+            <button class="btnplus" id="Minus">-</button>
         </div>
     </div>
 </aside>
